[gd_scene load_steps=8 format=3 uid="uid://dti3bbcaip07j"]

[ext_resource type="Script" path="res://Enemies/bosses/attacks/hatching_egg.gd" id="1_it0ah"]
[ext_resource type="Texture2D" uid="uid://2ycna2tptjii" path="res://Art/enemies/attacks/egg_item_anim.png" id="1_wkay0"]
[ext_resource type="PackedScene" uid="uid://dbspbpq1j55yt" path="res://Enemies/simple_enemy.tscn" id="2_bnoc6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jg8t3"]
radius = 6.0

[sub_resource type="Animation" id="Animation_sq4py"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_dod7a"]
resource_name = "hatching"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.1, 1.6, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.235619, -0.261799, 0.261799, 0.0, 0.0, 0.261799, -0.261799, 0.261799, 0.0, 0.0, 0.261799, -0.261799, 0.261799, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_hatch"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6jt2x"]
_data = {
"RESET": SubResource("Animation_sq4py"),
"hatching": SubResource("Animation_dod7a")
}

[node name="HatchingEgg" type="StaticBody2D"]
position = Vector2(41, 36)
collision_layer = 64
collision_mask = 37
script = ExtResource("1_it0ah")
spawn_animal_scene = ExtResource("2_bnoc6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -6)
texture = ExtResource("1_wkay0")
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_jg8t3")

[node name="Animations" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_6jt2x")
}

[node name="Timers" type="Node" parent="."]

[node name="HatchStartTimer" type="Timer" parent="Timers"]

[connection signal="timeout" from="Timers/HatchStartTimer" to="." method="_on_hatch_started"]
